# fntx-ai-v1

./: .env.example  .gitignore  CLAUDE.md  DATABASE_SETUP_GUIDE.md  Instructions.txt  Makefile  README.md  SETUP_GEMINI.md  SETUP_GUIDE.md  THETA_DATA_SYSTEM.md  TRADING_SETUP_GUIDE.md  demo_theta_system.py  fntx-ai-simple.conf  fntx-ai.conf  package-lock.json  pyproject.toml  requirements.txt  setup_trading_environment.sh  test_feature_engineering.py  test_model_training.py  wip.txt
00_archive/: CLAUDE_REFINEMENTS_SUMMARY.md  CLAUDEv1.md  Cash_Transactions_(1257704)_LBD.xml  Exercises_and_Expiries_(1257679)_LBD.xml  FNTX_AI_-_ALM.xml  FNTX_AI_-_DAILY.xml  Interest_Accruals_(1257708)_LBD.xml  NAV_(1257542)_LBD.xml  Trades_(1257690)_LBD.xml
01_backend/: check_available_contracts.py  check_db_schema.py  check_download_status.py  check_spy_data_20240930.py  execute_627_call.py  execute_spy_trades.py  query_spy_options.py
02_frontend/: .env.example  Dockerfile  package.json  vite.config.ts
03_database/: chat_history.json
04_data/: CASH_TRANSACTIONS_README.md  Cash_Transactions_(1257703)_MTD.xml  Interest_Accruals_(1257707)_MTD.xml  NAV_(1244257)_MTD.xml  database_analysis.md
05_docs/: ALM_REPORTING_COMPLETE_GUIDE.md  DATABASE_SCHEMAS.md  FLEXQUERY_CONFIGURATION_UPDATE.md  GEMINI_CHANGELOG.md  Paper 1.txt  Paper 2.txt  RL_SYSTEM_CONFIGURATION.md  orchestration-guide.md
06_scripts/: SCHEDULING_SETUP.md  check_exercises.py  diagnose_system.py  generate_alm_narrative.py  setup_cron_jobs.sh  setup_log_rotation.sh  test_exercise_system.py
12_rl_trading/: GPU_SETUP_DEBIAN.md  GPU_SETUP_GUIDE.md  README.md  show_performance.sh
Documentation/: AUTOMATED_SETUP_SCRIPT.md  FNTX_PROJECT_OVERVIEW.md  GCP_COST_OPTIMIZATION_PLAN.md  SYSTEM_BACKUP_DOCUMENTATION.md  VIRTUAL_ENVIRONMENT_SETUP.md  VM_SETUP_GUIDE.md
backend/: Dockerfile  THETADATA_VALUE_REPORT.md  __init__.py  compare_theta_implementations.py  (+14 more)
fntx-cli/: CLI commands.txt  README.md  install.sh  pyproject.toml  setup.py
fntx-cli/.github/workflows/: test.yml
fntx-cli/cli/: main.py
fntx-cli/cli/commands/: connect.py  schedule.py  trade.py  wallet.py
fntx-cli/core/donations/: __init__.py  models.py
fntx-cli/docs/architecture/: overview.md
fntx-cli/ibkr/: __init__.py  alm_daily_import.timer  setup_daily_import.sh
fntx-cli/mcp/: tools.py
fntx-cli/scripts/: launch.sh
fntx-cli/services/agent-factory/: Dockerfile  requirements.txt
fntx-cli/services/agent-factory/agent_factory/: config.py
fntx-cli/services/federated-learning/: requirements.txt
fntx-cli/services/federated-learning/federated_learning/: __init__.py
fntx-cli/services/risk-engine/risk_engine/: __init__.py
fntx-terminal/: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
fntx-terminal/src/fntx/: __init__.py  __main__.py  app.py  config.py
fntx-terminal/src/fntx/demo/: __init__.py  data_generator.py
fntx-terminal/src/fntx/screens/: __init__.py  dashboard.py  login.py
(+1717 files in other folders)
