[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fntx-tui"
version = "0.1.0"
description = "FNTX Trading CLI"
authors = [{name = "FNTX"}]
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
    "textual>=0.47.0",
    "aiohttp>=3.9.0",
    "bcrypt>=4.0.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
fntx = "tui.main:main"