[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "fntx-cli"
version = "0.1.0"
description = "FNTX Trading CLI"
authors = [{name = "FNTX"}]
requires-python = ">=3.8"
dependencies = [
    "click",
    "rich",
]

[project.scripts]
fntx = "cli.main:cli"