[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fntx-terminal"
version = "1.0.0"
description = "FNTX Trading Terminal - A cyberpunk-themed options trading dashboard"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "FNTX AI Team", email = "dev@fntx.ai"}
]
maintainers = [
    {name = "FNTX AI Team", email = "dev@fntx.ai"}
]
keywords = [
    "trading", "options", "terminal", "tui", "dashboard",
    "cyberpunk", "finance", "textual", "rich"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Terminals",
]
requires-python = ">=3.8"
dependencies = [
    "textual>=0.40.0",
    "rich>=13.0.0",
    "pandas>=1.5.0",
    "numpy>=1.20.0",
    "pytz>=2023.3",
    "aiohttp>=3.8.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
live = [
    "psycopg2-binary>=2.9.0",
    "asyncpg>=0.27.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/fntx-ai/fntx-terminal"
Documentation = "https://docs.fntx.ai/terminal"
Repository = "https://github.com/fntx-ai/fntx-terminal.git"
Issues = "https://github.com/fntx-ai/fntx-terminal/issues"

[project.scripts]
fntx = "fntx.__main__:main"
fntx-terminal = "fntx.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
fntx = [
    "themes/*.toml",
    "demo/*.json",
    "assets/*.txt",
]